--- a/index.html
+++ b/index.html
@@ -16,21 +16,13 @@
       }
     </style>
     <meta charset="utf-8" />
-    <title>Black - Webflow HTML website template</title>
-    <meta content="Black - Webflow HTML website template" name="description" />
-    <meta content="Black - Webflow HTML website template" property="og:title" />
-    <meta
-      content="Black - Webflow HTML website template"
-      property="og:description"
-    />
-    <meta
-      content="Black - Webflow HTML website template"
-      property="twitter:title"
-    />
-    <meta
-      content="Black - Webflow HTML website template"
-      property="twitter:description"
-    />
+    <title>DotStudios – Innovate. Elevate. Create.</title>
+    <meta name="description" content="DotStudios – Innovating the future of digital experiences with cutting-edge design and technology."/>
+<meta property="og:title" content="DotStudios – Pioneering Digital Creativity"/>
+<meta property="og:description" content="Discover next-level apps, immersive designs, and groundbreaking digital solutions from DotStudios."/>
+<meta property="twitter:title" content="DotStudios – Elevate Your Digital Experience"/>
+<meta property="twitter:description" content="Bringing innovation to life through technology and design at DotStudios."/>
+
     <meta property="og:type" content="website" />
     <meta content="summary_large_image" name="twitter:card" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
