--- a/paper.html
+++ b/paper.html
@@ -1,8 +1,4 @@
 <html
-  data-wf-domain="az-black.webflow.io"
-  data-wf-page="63aee5793ca698e95ffe7f77"
-  data-wf-site="63aee5793ca698452efe7f60"
-  class="w-mod-js wf-manrope-n2-active wf-manrope-n3-active wf-manrope-n4-active wf-manrope-n5-active wf-manrope-n6-active wf-manrope-n7-active wf-manrope-n8-active wf-inter-n2-active wf-inter-n3-active wf-inter-n4-active wf-inter-n5-active wf-inter-n6-active wf-active w-mod-ix w-mod-js w-mod-js w-mod-js"
 >
   <head>
     <style>
@@ -26,21 +22,13 @@
       }
     </style>
     <meta charset="utf-8" />
-    <title>Black - Webflow HTML website template</title>
-    <meta content="Black - Webflow HTML website template" name="description" />
-    <meta content="Black - Webflow HTML website template" property="og:title" />
-    <meta
-      content="Black - Webflow HTML website template"
-      property="og:description"
-    />
-    <meta
-      content="Black - Webflow HTML website template"
-      property="twitter:title"
-    />
-    <meta
-      content="Black - Webflow HTML website template"
-      property="twitter:description"
-    />
+    <title>DotStudios – Innovate. Elevate. Create.</title>
+    <meta name="description" content="DotStudios – Innovating the future of digital experiences with cutting-edge design and technology."/>
+<meta property="og:title" content="DotStudios – Pioneering Digital Creativity"/>
+<meta property="og:description" content="Discover next-level apps, immersive designs, and groundbreaking digital solutions from DotStudios."/>
+<meta property="twitter:title" content="DotStudios – Elevate Your Digital Experience"/>
+<meta property="twitter:description" content="Bringing innovation to life through technology and design at DotStudios."/>
+
     <meta property="og:type" content="website" />
     <meta content="summary_large_image" name="twitter:card" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
