--- a/paper.html
+++ b/paper.html
@@ -703,7 +703,7 @@
               "
             >
               <a
-                href="https://play.google.com/store/apps/dev?id=7398452419891423738"
+                href="https://play.google.com/store/apps/details?id=com.studios.dotpaper"
                 target="_blank"
                 class="download-badge-button w-inline-block"
                 ><img
